--- a/starrysky/build.gradle
+++ b/starrysky/build.gradle
@@ -32,8 +32,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation "androidx.media:media:1.0.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api "androidx.media:media:1.0.0"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     if (findProject(':exoplayer-library-core') != null) {
         api project(':exoplayer-library-core')
